Collect-TV-20180201/src/objects/cgsss__GoogSession__c.object
<CustomObject>
    <description>Hold a user&apos;s google session ID and current import/export preferences</description>
    <fields>
        <fullName>cgsss__Anti_CSRF_Token__c</fullName>
        <description>To prevent CSRF Issues, we may need a token to be stored.</description>
        <label>Anti CSRF Token</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cgsss__AuthSubSessionToken__c</fullName>
        <label>AuthSubSessionToken</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cgsss__Data_Priority__c</fullName>
        <label>Data Priority</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GOOGLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALESFORCE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cgsss__Dont_Recreate_Deleted_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Recreate Deleted Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cgsss__Filter_Data__c</fullName>
        <description>The filters</description>
        <label>Filter_Data</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cgsss__Google_Custom_Fields_in_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Custom Fields in Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cgsss__Guess_Matching_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guess Matching Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cgsss__Link_To_Matching_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Link To Matching Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cgsss__Size_of_Contacts__c</fullName>
        <label>Size of Contacts</label>
        <picklist>
            <picklistValues>
                <fullName>Tiny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cgsss__State_Data__c</fullName>
        <description>Data about exported/imported contacts</description>
        <label>State_Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cgsss__Transfer_Partial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Preference for partial transfer of records, if some failures occur, currently import only.</description>
        <label>Transfer Partial</label>
        <type>Checkbox</type>
    </fields>
    <label>GoogSession</label>
    <listViews>
        <fullName>cgsss__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GoogSession Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GoogSessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>